--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "framer-motion": "^7.2.1",
     "magic-sdk": "^9.0.0",
     "next": "12.2.5",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.15.1"
   },
   "devDependencies": {
     "eslint": "8.22.0",
