--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@magic-sdk/admin": "^1.4.1",
     "classnames": "^2.3.1",
     "framer-motion": "^7.2.1",
     "magic-sdk": "^9.0.0",
